fixed ui overflow imported new font

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Micro+5&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -23,6 +25,8 @@ body{
     /*background-color: rgb(255, 0, 0, 0.5);*/
     position: absolute;
     top: 0;
+    bottom: 0;
+    margin: auto 0;
     pointer-events: none;
     overflow: hidden;
 }
@@ -57,7 +61,6 @@ body{
 .inventory-object{
     width: 150px;
     height: 150px;
-    height: 10em;
     background: url("../sprites/Object_BG.png");
     background-size: contain;
     display: flex;
@@ -70,8 +73,8 @@ body{
 }
 
 #pause{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgb(0, 0, 0, 0.3);
     position: absolute;
     z-index: 10;
@@ -84,15 +87,16 @@ body{
     height: 20%;
     background-color: rgb(0, 0, 0, 0.5);
     color: white;
-    font-size: 5em;
+    font-size: 10em;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: "Micro 5", serif;
 }
 
 #unlock-window{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     /*background-color: grey;*/
     position: absolute;
     flex-direction: column;
@@ -101,11 +105,20 @@ body{
 }
 
 #unlock-bloc{
-    width: 40%;
-    height: 20%;
+    width: 50%;
+    height: 30%;
     background-color: black;
     color: white;
     padding: 2em;
+    font-family: "Micro 5", serif;
+}
+
+#unlock-title{
+    font-size: 4rem;
+}
+
+#unlock-text{
+    font-size: 2rem;
 }
 
 .unpaused{
